--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,8 @@
   display: block;
   text-align: center;
   padding: 0px;
+  opacity: 1;
+    transform: translate(0px, 0px) rotate(0deg) skew(0deg, 0deg) scale(1, 1);
 }
 .menu ul {
   position: relative;
