--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,30 +1,48 @@
+body {
+  /* background-color: rgb(68, 52, 138); */
+  background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+	color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+}
+.ant-layout-header{
+  height: 90px;
+}
+
 .burger-menu,
 .burger-menu.open {
-  display: inline-block;
   cursor: pointer;
   position: sticky;
   right: 20px;
   bottom: 40px;
+  top: 20px;
   z-index: 9999;
   padding: 10px;
   border-radius: 25px;
-    /* background: #fff; */
+  float: right;
+  /* display: inline-block; */
+  /* background: #fff; */
   /* box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3); */
+}
+
+.titles {
+  font-size: 2.5em;
+  font-weight: 400;
 }
 
 .burger-menu .bar1,
 .bar2,
 .bar3 {
-  width: 25px;
-  height: 3px;
+  width: 35px;
+  height: 6px;
   background-color: #333;
   margin: 4px 0;
   transition: 0.5s;
 }
 
 .burger-menu.open .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-4px, 4px);
-  transform: rotate(-45deg) translate(-4px, 4px);
+  -webkit-transform: rotate(-45deg) translate(-8px, 8px);
+  transform: rotate(-45deg) translate(-8px, 8px);
 }
 
 .burger-menu.open .bar2 {
@@ -47,8 +65,6 @@
   display: block;
   text-align: center;
   padding: 0px;
-  opacity: 1;
-    transform: translate(0px, 0px) rotate(0deg) skew(0deg, 0deg) scale(1, 1);
 }
 .menu ul {
   position: relative;
