--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,14 +1,23 @@
 body {
   /* background-color: rgb(68, 52, 138); */
   background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
-	color: #fff;
-  font-family: 'Montserrat', sans-serif;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
   margin: 0;
 }
-.ant-layout-header{
+.ant-layout-header {
   height: 90px;
 }
-
+/* Texts */
+.titles {
+  font-size: 2.5em;
+  font-weight: 400;
+}
+.padFAwe{
+  padding-right: 10%;
+  padding-left: 10%;
+}
+/*Burger*/
 .burger-menu,
 .burger-menu.open {
   cursor: pointer;
@@ -23,11 +32,6 @@ body {
   /* display: inline-block; */
   /* background: #fff; */
   /* box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3); */
-}
-
-.titles {
-  font-size: 2.5em;
-  font-weight: 400;
 }
 
 .burger-menu .bar1,
