--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,7 +2,7 @@ body {
   /* background-color: rgb(68, 52, 138); */
   background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
   color: #fff;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin: 0;
 }
 .ant-layout-header {
@@ -103,6 +103,25 @@ body {
 }
 .menu li:hover {
   color: #ff0000;
+}
+
+
+
+
+.reveals-main {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.reveals-main > div {
+  /* font-weight: 800;
+  font-size: 4em; */
+  will-change: transform, opacity;
+  overflow: hidden;
 }
 
 
