--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,9 +1,18 @@
 body {
   /* background-color: rgb(68, 52, 138); */
-  background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+  /* background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); */
   color: #fff;
   font-family: 'Raleway', sans-serif;
   margin: 0;
+  /* background: url('../img/bg-home-sol.jpg') no-repeat;
+  background-size: cover;
+  height: 100vh; */
+}
+html,
+body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
 }
 .ant-layout-header {
   height: 90px;
@@ -32,6 +41,7 @@ body {
   padding-left: 10%;
 }
 .upperStyle {
+  font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
   font-weight: 400;
   letter-spacing: 0.4em;
@@ -49,27 +59,27 @@ a {
   bottom: 40px;
   top: 20px;
   z-index: 9999;
-  padding: 10px;
-  border-radius: 25px;
+  padding: 15px;
+  border-radius: 50%;
   float: right;
   /* display: inline-block; */
-  /* background: #fff; */
-  /* box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3); */
+  background: #fff;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
 }
 
 .burger-menu .bar1,
 .bar2,
 .bar3 {
-  width: 35px;
-  height: 6px;
-  background-color: #333;
+  width: 25px;
+  height: 3px;
+  background-color: rgb(107, 107, 107);
   margin: 4px 0;
   transition: 0.5s;
 }
 
 .burger-menu.open .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-8px, 8px);
-  transform: rotate(-45deg) translate(-8px, 8px);
+  -webkit-transform: rotate(-45deg) translate(-4px, 4px);
+  transform: rotate(-45deg) translate(-4px, 4px);
 }
 
 .burger-menu.open .bar2 {
@@ -125,5 +135,57 @@ a {
   will-change: transform, opacity;
   overflow: hidden;
 }
+.container-home-bg{
+  background: url('../img/bg-home-sol.jpg') no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
 
+
+/* Button see proyects arrow in movement */
+.line-btn {
+  border: 1px solid white;
+  background: transparent;
+  width: 80%;
+  padding: 15px;
+  border-radius: 3px;
+  color: white;
+  transition: background 0.5s ease;
+}
+
+.line-btn:hover {
+  background: blue;
+  color: white;
+  font-weight: normal;
+  cursor: pointer;
+}
+
+.line-btn:hover .iconAnt {
+  color: white;
+
+}
+
+.iconAnt {
+  color: rgb(255, 255, 255);
+  margin-left: 20px;
+  animation: slide1 1s ease-in-out infinite;
+}
+
+.arrow1 {
+  animation: slide1 1s ease-in-out infinite;
+  margin-left: 9px;
+}
+
+
+
+@keyframes slide1 {
+  0%,
+  100% {
+    transform: translate(0, 0);
+  }
+
+  50% {
+    transform: translate(10px, 0);
+  }
+}
 
