--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,7 @@
 body {
   /* background-color: rgb(68, 52, 138); */
   /* background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); */
-  color: #fff;
+  /* color: #fff; */
   font-family: 'Raleway', sans-serif;
   margin: 0;
   /* background: url('../img/bg-home-sol.jpg') no-repeat;
@@ -14,6 +14,7 @@ body {
   height: 100%;
   overflow: hidden;
 }
+/* Layout, position, padding, margin, height */
 .ant-layout-header {
   height: 90px;
 }
@@ -21,8 +22,12 @@ body {
   padding-left: 4%;
   padding-right: 4%;
 }
+.padFAwe{
+  padding-right: 10%;
+  padding-left: 10%;
+}
 /* Texts */
-.sizeTile {
+.sizeTitle {
   font-size: 2.5em;
 }
 .sizeMedium {
@@ -36,20 +41,40 @@ body {
   font-weight: 400;
   font-size: 2.5em;
 }
-.padFAwe{
-  padding-right: 10%;
-  padding-left: 10%;
-}
 .upperStyle {
   font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
   font-weight: 400;
   letter-spacing: 0.4em;
 }
-/* Links */
-a {
-  text-decoration: none;
+.whiteFont {
+  color: #fff;
 }
+.purple {
+  color: #da32ab;
+}
+/* Transition words animation */
+.reveals-main {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  cursor: pointer;
+}
+.reveals-main > div {
+  /* font-weight: 800;
+  font-size: 4em; */
+  will-change: transform, opacity;
+  overflow: hidden;
+}
+.container-home-bg{
+  background: url('../img/bg-home-sol.jpg') no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+
 /*Burger*/
 .burger-menu,
 .burger-menu.open {
@@ -64,7 +89,7 @@ a {
   float: right;
   /* display: inline-block; */
   background: #fff;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 12px 3px rgba(0, 0, 0, 0.25);
 }
 
 .burger-menu .bar1,
@@ -92,11 +117,6 @@ a {
 }
 
 /* Menu */
-/* .burger-menu.open .menu {
-  -webkit-transform: rotate(45deg) translate(-6px, -6px);
-  transform: rotate(45deg) translate(-6px, -6px);
-} */
-
 .menu {
   width: 100%;
   display: block;
@@ -119,73 +139,42 @@ a {
   color: #ff0000;
 }
 
-/* Transition words animation */
-.reveals-main {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  /* justify-content: center; */
-  cursor: pointer;
-}
-.reveals-main > div {
-  /* font-weight: 800;
-  font-size: 4em; */
-  will-change: transform, opacity;
-  overflow: hidden;
-}
-.container-home-bg{
-  background: url('../img/bg-home-sol.jpg') no-repeat;
-    background-size: cover;
-    height: 100vh;
-}
-
-
-/* Button see proyects arrow in movement */
+/* Button's style*/
 .line-btn {
   border: 1px solid white;
   background: transparent;
   width: 80%;
-  padding: 15px;
+  padding: 1em 2em 1em 2em;
+  font-size: 0.9em;
   border-radius: 3px;
   color: white;
   transition: background 0.5s ease;
 }
 
 .line-btn:hover {
-  background: blue;
+  background: #da32ab;
+  opacity: 1;
   color: white;
   font-weight: normal;
   cursor: pointer;
+  -webkit-transition: background 0.5s ease;
+  -moz-transition: background 0.5s ease;
+  -o-transition: background 0.5s ease;
+  transition: background  0.5s ease;
 }
-
-.line-btn:hover .iconAnt {
-  color: white;
-
+.line-btn:focus {
+  outline:0;
 }
-
-.iconAnt {
-  color: rgb(255, 255, 255);
-  margin-left: 20px;
-  animation: slide1 1s ease-in-out infinite;
+/* Links */
+a {
+  text-decoration: none;
 }
-
-.arrow1 {
-  animation: slide1 1s ease-in-out infinite;
-  margin-left: 9px;
+.menu-links {
+  color: #888;
 }
-
-
-
-@keyframes slide1 {
-  0%,
-  100% {
-    transform: translate(0, 0);
-  }
-
-  50% {
-    transform: translate(10px, 0);
-  }
+.menu-links:hover {
+  color: rgb(97, 97, 97);
 }
-
+.menu-links:visited {
+  color: #888;
+}
