--- a/src/css/index.css
+++ b/src/css/index.css
@@ -76,19 +76,20 @@ body {
   height: 90px;
 }
 .pad-section {
-  padding-left: 4%;
-  padding-right: 4%;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 .padFAwe {
   padding-right: 10%;
   padding-left: 10%;
 }
 .pad-btn-demo {
-  margin-right: 8%;
+  margin-right: 1.5rem;;
+
 }
 .pad-bur {
   padding-bottom: 4%;
-  padding-top: 12%;
+  padding-top: 2.5rem;
 }
 .pad-bur-btns{
     padding-bottom: 4%;
@@ -112,7 +113,7 @@ body {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   font-weight: 400;
-  letter-spacing: 0.3em;
+  letter-spacing: 0.4rem;
 }
 .whiteFont {
   color: #fff;
@@ -156,6 +157,7 @@ body {
   border-radius: 3px;
   color: white;
   transition: background 0.5s ease;
+   display: inline-block;
 }
 
 .line-btn:hover {
@@ -182,6 +184,8 @@ body {
   color: #f2994a;
   transition: background 0.5s ease;
 }
+
+
 /* Links */
 a {
   text-decoration: none;
