--- a/src/css/index.css
+++ b/src/css/index.css
@@ -61,6 +61,8 @@ body {
   top: 0px;
   font-size: 24px;
   padding: 0px;
+  margin-top: -1rem;
+    margin-bottom: 2rem;
 }
 .menu li {
   list-style: outside none none;
