--- a/src/css/index.css
+++ b/src/css/index.css
@@ -62,7 +62,7 @@ body {
   font-size: 24px;
   padding: 0px;
   margin-top: -1rem;
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 .menu li {
   list-style: outside none none;
@@ -86,19 +86,18 @@ body {
   padding-left: 10%;
 }
 .pad-btn-demo {
-  margin-right: 1.5rem;;
-
+  margin-right: 1.5rem;
 }
 .pad-bur {
   padding-bottom: 2.5rem;
   padding-top: 2.5rem;
 }
-.pad-bur-btns{
-    padding-bottom: 4%;
+.pad-bur-btns {
+  padding-bottom: 4%;
 }
 .pad-lfrg-pages {
   padding-left: 1rem;
-   padding-right: 1rem;
+  padding-right: 1rem;
 }
 /* Texts */
 .sizeTitle {
@@ -135,7 +134,7 @@ body {
   padding-left: 70%;
   margin-top: -3%;
 }
-.proj-title{
+.proj-title {
   font-weight: 700;
   font-size: 3em;
 }
@@ -194,20 +193,15 @@ body {
   padding: 0.7em;
   font-size: 0.9em;
   border-radius: 3px;
-  /* color: #f2994a; */
   transition: background 0.5s ease;
 }
 .btn-orange {
-  /* border: 1px solid #f7f7f7;
-  color: #f7f7f7; */
   background-color: #f7f7f7;
-    color: #ea8225;
-    -webkit-box-shadow: 2px 3px 23px 3px rgba(0,0,0,0.17);
-    -moz-box-shadow: 2px 3px 23px 3px rgba(0,0,0,0.17);
-    box-shadow: 2px 3px 23px 3px rgba(0,0,0,0.17);
+  color: #ea8225;
+  -webkit-box-shadow: 2px 3px 23px 3px rgba(0, 0, 0, 0.17);
+  -moz-box-shadow: 2px 3px 23px 3px rgba(0, 0, 0, 0.17);
+  box-shadow: 2px 3px 23px 3px rgba(0, 0, 0, 0.17);
 }
-
-
 
 /* Links */
 a {
