Footer is now a component. Share a smile changing image

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -232,3 +232,11 @@ a {
   width: 100%;
   height: auto;
 }
+
+/* footer */
+/* background: "#2e2e2e",
+color: "#FFF",
+textAlign: "center",
+width: `${100}%`,
+paddingTop: `${3.5}rem`,
+paddingBottom: `${3.5}rem` */
