--- a/src/css/index.css
+++ b/src/css/index.css
@@ -149,7 +149,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  display: flex;
+  /* display: flex; */
   align-items: center;
   cursor: pointer;
 }
